--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" type="text/css" href="slick.css" />
     <link rel="stylesheet" type="text/css" href="slick-theme.css" />
     <link
@@ -21,7 +22,7 @@
   <body>
     <header id="header" class="header">
       <div class="header_wrap flex">
-        <h1 class="header_logo">SHOES</h1>
+        <h1 class="header_logo"><a href="#top">Shoes</a></h1>
         <div class="header_hamburger">
           <p class="line"></p>
           <p class="line"></p>
@@ -49,7 +50,7 @@
 
     <main>
       <div id="kv" class="kv">
-        
+        <video src="img/top.mp4" autoplay muted></video>
       </div>
 
       <section id="pickUp" class="pickUp item">
@@ -225,6 +226,7 @@
     <script src="js/jquery-3.6.1.slim.min.js"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
 
+    <script src="js/swiper-bundle-min.js"></script>
     <script src="js/slick.js"></script>
     <script src="js/script.js"></script>
   </body>
